[package]
name = "press_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "press_news_derive"
]

[dependencies]
press_news_derive = {path = "./press_news_derive"}

[[example]]
name = "fake-real"
